--- a/PosturePlus/Base.lproj/Main.storyboard
+++ b/PosturePlus/Base.lproj/Main.storyboard
@@ -76,6 +76,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="229" y="239"/>
         </scene>
         <!--Pie Chart View Controller-->
         <scene sceneID="7qs-ff-Occ">
@@ -119,8 +120,27 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="98u-9w-QkG">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                <items>
+                                    <navigationItem id="3qX-nS-mAi">
+                                        <barButtonItem key="leftBarButtonItem" style="plain" id="iAL-C7-eOg">
+                                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="tCd-QP-gik">
+                                                <rect key="frame" x="-23" y="-15" width="133" height="30"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Back">
+                                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                </state>
+                                                <connections>
+                                                    <segue destination="vXZ-lx-hvc" kind="show" id="xh5-vs-jgB"/>
+                                                </connections>
+                                            </button>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                             <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JkS-Um-gtJ" customClass="DescriptionView" customModule="PosturePlus" customModuleProvider="target">
-                                <rect key="frame" x="16" y="20" width="124" height="90"/>
+                                <rect key="frame" x="16" y="67" width="124" height="90"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Good Posture" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GkN-ZU-yoi">
                                         <rect key="frame" x="46" y="10" width="78" height="21"/>
@@ -143,25 +163,6 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="98u-9w-QkG">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
-                                <items>
-                                    <navigationItem id="3qX-nS-mAi">
-                                        <barButtonItem key="leftBarButtonItem" style="plain" id="iAL-C7-eOg">
-                                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="tCd-QP-gik">
-                                                <rect key="frame" x="-23" y="-15" width="133" height="30"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <state key="normal" title="Back">
-                                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                                </state>
-                                                <connections>
-                                                    <segue destination="vXZ-lx-hvc" kind="show" id="xh5-vs-jgB"/>
-                                                </connections>
-                                            </button>
-                                        </barButtonItem>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -169,6 +170,8 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="DayView" destination="uPB-xW-SEh" id="FNl-uO-h6G"/>
+                        <outlet property="DescriptionView" destination="JkS-Um-gtJ" id="EgY-fJ-qea"/>
                         <outlet property="Hours3View" destination="PKL-Og-28z" id="JqW-q4-Hiw"/>
                         <outlet property="WeeklyView" destination="HxF-ib-Qda" id="6mX-fJ-vVM"/>
                         <outlet property="bntBack" destination="tCd-QP-gik" id="Ime-ng-tf1"/>
